[package]
name = "slug"
version = "0.1.1"
edition = "2024"
readme = "README.md"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }

unwrap_used = { level = "deny", priority = 1 }
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "deny"
as_underscore = "warn"
assertions_on_constants = "deny"
assertions_on_result_states = "deny"
bool_to_int_with_if = "warn"
large_stack_frames = "warn"
missing_const_for_fn = "deny"

# This lint is not mature enough to be used
significant_drop_tightening ={ level = "allow", priority = 1}
